added public folder

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 <p>Click on an image to enlarge it</p>
             </div>
             <div class="gallery">
-                <img src="WhatsApp Image 2023-09-14 at 3.15.26 PM.jpeg" alt="Image 1" onclick="openImage(this)">
-                <img src="WhatsApp Image 2023-09-14 at 3.15.27 PM.jpeg" alt="Image 2" onclick="openImage(this)">
-                <img src="WhatsApp Image 2023-09-14 at 3.18.09 PM (1).jpeg" alt="Image 3" onclick="openImage(this)">            
-                <img src="WhatsApp Image 2023-09-14 at 3.18.09 PM (2).jpeg" alt="Image 3" onclick="openImage(this)">            
-                <img src="WhatsApp Image 2023-09-14 at 3.18.09 PM.jpeg" alt="Image 3" onclick="openImage(this)">            
-                <img src="WhatsApp Image 2023-09-14 at 5.03.32 PM.jpeg" alt="Image 3" onclick="openImage(this)">            
+                <img src="public/WhatsApp Image 2023-09-14 at 3.15.26 PM.jpeg" alt="Image 1" onclick="openImage(this)">
+                <img src="public/WhatsApp Image 2023-09-14 at 3.15.27 PM.jpeg" alt="Image 2" onclick="openImage(this)">
+                <img src="public/WhatsApp Image 2023-09-14 at 3.18.09 PM (1).jpeg" alt="Image 3" onclick="openImage(this)">            
+                <img src="public/WhatsApp Image 2023-09-14 at 3.18.09 PM (2).jpeg" alt="Image 3" onclick="openImage(this)">            
+                <img src="public/WhatsApp Image 2023-09-14 at 3.18.09 PM.jpeg" alt="Image 3" onclick="openImage(this)">            
+                <img src="public/WhatsApp Image 2023-09-14 at 5.03.32 PM.jpeg" alt="Image 3" onclick="openImage(this)">            
             </div>
 
             <div class="overlay" onclick="closeImage()">
